Added files for Add to homescreen

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
       <meta property="og:image" content="http://nebez.github.io/floppybird/assets/thumb.png" />
       <meta property="og:url" content="http://nebez.github.io/floppybird/" />
       <meta property="og:site_name" content="Floppy Bird" />
+      <link rel="manifest" href="/manifest.json">
       
       <!-- Style sheets -->
       <link href="css/reset.css" rel="stylesheet">
