--- a/public/index.html
+++ b/public/index.html
@@ -22,15 +22,16 @@
       <meta http-equiv="content-type" content="text/html; charset=utf-8" />
       <meta name="author" content="Nebez Briefkani" />
       <meta name="description" content="play floppy bird. a remake of popular game flappy bird using just html/css/js" />
-      <meta name="keywords" content="flappybird,flappy,bird,floppybird,floppy,html,html5,css,css3,js,javascript,jquery,github,nebez,briefkani,nebezb,open,source,opensource" />
+      <meta name="keywords" content="flappybird,flappy,bird,floppybird,floppy,html,html5,css,css3,js,javascript,jquery,github,nebez,briefkani,nebezb,ponnex,open,source,opensource" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+      <meta name="theme-color" content="#4EC0CA"/>
 
       <!-- Open Graph tags -->
       <meta property="og:title" content="Floppy Bird" />
       <meta property="og:description" content="play floppy bird. a remake of popular game flappy bird using just html/css/js" />
       <meta property="og:type" content="website" />
-      <meta property="og:image" content="http://nebez.github.io/floppybird/assets/thumb.png" />
-      <meta property="og:url" content="http://nebez.github.io/floppybird/" />
+      <meta property="og:image" content="https://floppy-bird-pwa.firebaseapp.com/assets/thumb.png" />
+      <meta property="og:url" content="https://floppy-bird-pwa.firebaseapp.com/" />
       <meta property="og:site_name" content="Floppy Bird" />
       <link rel="manifest" href="/manifest.json">
       
@@ -67,7 +68,7 @@
       <div id="footer">
          <a href="http://www.dotgears.com/">original game/concept/art by dong nguyen</a>
          <a href="http://nebezb.com/">recreated by nebez briefkani</a>
-         <a href="http://github.com/nebez/floppybird/">view github project</a>
+         <a href="https://github.com/ponnex/PWA-Flappy-Bird/">progressive web app by ponnex</a>
       </div>
       <div class="boundingbox" id="playerbox"></div>
       <div class="boundingbox" id="pipebox"></div>
