Add to Homescreen for iOS

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,9 @@
       <!-- Style sheets -->
       <link href="css/reset.css" rel="stylesheet">
       <link href="css/main.css" rel="stylesheet">
+
+      <!-- Apple Add to Homescreen -->
+      <meta name="apple-mobile-web-app-capable" content="yes">
    </head>
    <body>
       <div id="gamecontainer">
