Added apple touch icons

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,11 @@
 
       <!-- Apple Add to Homescreen -->
       <meta name="apple-mobile-web-app-capable" content="yes">
+      <meta name="apple-mobile-web-app-title" content="Floppy Bird">
+      
+      <link rel="apple-touch-icon" href="https://floppy-bird-pwa.firebaseapp.com/assets/thumb.png" >
+      <link rel="apple-touch-icon" sizes="144x144" href="https://floppy-bird-pwa.firebaseapp.com/assets/flappy_bird_144px.png">
+      <link rel="apple-touch-icon" sizes="192x192" href="https://floppy-bird-pwa.firebaseapp.com/assets/flappy_bird_192px.png">
    </head>
    <body>
       <div id="gamecontainer">
